--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<div id="container">
 		<figure id="icon_figure">
-			<img src="" id="icone" >
+			<img src="img/cloud.png" id="icone" >
 			<figcaption id="icon_description">
-				Descrição
+				
 			</figcaption>
 
 		</figure>
@@ -36,5 +36,6 @@
 
 <script type="text/javascript" src="script/script.js"></script>
 
+<footer><script type="text/javascript">document.querySelector('footer').innerText="\u0057\u0065\u0073\u006C\u0065\u0079\u00A0\u004A\u0075\u006E\u0069\u006F\u00A0\u00A9\u0032\u0030\u0032\u0031";</script></footer>
 </body>
 </html>
